<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasyHabit</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="action_create_goal">Insert Goal Data</string>
    <string name="action_data_cleanup">Cleanup Data</string>
    <string name="check_in_action_item_text">You have %s left to check in your weight, would you
        like to check in?</string>
    <string name="check_in_button">check-in</string>
    <string name="create_goal_button_label">Create a goal</string>
    <string name="create_account_and_goal_button_label">Login</string>
    <string name="content_description">An image of a personal trainer</string>
    <string name="confirm_action_item_text">%1$s claims that his/her weight is %2$.1f
        %3$s as of %4$s</string>
    <string name="confirm_button">confirm</string>
    <string name="deny_button">deny</string>
    <string name="goal_display_text">Lose 5 pounds per week for 6 weeks</string>
    <string name="goal_interval_text">Jul 14 - Aug 10</string>
    <string name="goal_remaining_duration_text">Only 2 weeks remain</string>
    <string name="progress_bubble_text">5/10 pounds lost</string>
    <string name="ribbon_text">My weight over time</string>
    <string name="button_last_month">1 Month</string>
    <string name="button_last_six_month">6 Months</string>
    <string name="create_goal_message">Everything in the app is tied to an active goal. Please create a goal in 3 simple steps.</string>
    <string name="create_account_and_goal_message">Everything in the app is tied to an active goal. Please login and create a goal in 3 simple steps.</string>
    <string name="button_max">Max</string>
    <string name="parse_app_id">S4mHccoVQR80mEdnU67D6IVAeizBrOXIitXILEZ1</string>
    <string name="parse_client_key">BtlC78Hznr8pjgPXdoRNCCyECDuJ4s6CI1NDJiSV</string>
    <string name="facebook_app_id">1643331935933160</string>
    <string name="twitter_consumer_key">Jci11mXK4Q8yJbEivKalSaLla</string>
    <string name="twitter_consumer_secret">sQW9cIjdbKhSB27LiZkHI5qkIUImIoxwesO61hZr8h0XyzKQM3</string>
    <string name="activity_welcome_background_image_conent_description">background image</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="maybe_later">Explore the app</string>
    <string name="prev">back</string>
    <string name="next">next</string>
    <string name="firstStepString">First step</string>
    <string name="tellMeAboutYou">tell me about you …</string>
    <string name="stepTwoString">Second step</string>
    <string name="commitMoney">commit money</string>
    <string name="stepThreeString">Last step</string>
    <string name="getReferee">get a referee</string>
    <string name="step1_currentWeight">Current weight in lbs (pounds)</string>
    <string name="step1_totalGoal">Weight-loss goal (lbs per week)</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_current_weight">Enter your current weight</string>
    <string name="err_msg_goal_weight">Enter your weekly goal</string>
    <string name="err_msg_invalid_current_weight">Wow! This is your weight?</string>
    <string name="err_msg_invalid_goal_weight">Really? Your goal should be at least zero</string>
    <string name="err_msg_more_than_max">Set sustainable goal (less than %1$.1f)</string>
    <string name="what_is_your_weight">What is your weight today (in %1$s)?</string>
    <string name="your_referee_text">My referee: %1$s</string>
    <string name="you_pledged_text">I pledged $%1$.2f per week</string>
    <string name="my_goal_i_commited_string">I commited to pay $%1$.2f per week to my referee (%2$s) if weekly goal is not reached</string>
    <string name="notification_please_weight_in">It is time for your weekly weight-in. Please log your weight.</string>
    <string-array name="money_amount_display">
        <item>$ 0</item>
        <item>$ 1</item>
        <item>$ 2</item>
        <item>$ 5</item>
        <item>$ 10</item>
        <item>$ 15</item>
    </string-array>
    <string-array name="weight_unit">
        <item>LB</item>
        <item>KG</item>
    </string-array>

</resources>